MD Extensions: Display installation warnings when error console is disabled.

Bug: 789242
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I6c379b49dc444a786a5afa597c306d69f5a43841
Reviewed-on: https://chromium-review.googlesource.com/798799
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520649}