chrome/browser/resources/md_extensions/manager.js
@@ -99,6 +99,12 @@ cr.define('extensions', function() {
       showLoadErrorDialog_: Boolean,
 
       /** @private */
+      showInstallWarningsDialog_: Boolean,
+
+      /** @private {?Array<string>} */
+      installWarnings_: Array,
+
+      /** @private */
       showOptionsDialog_: Boolean,
 
       /** @private */
@@ -499,6 +505,24 @@ cr.define('extensions', function() {
       // because the corresponding extension/app was deleted.
       if (button)
         button.focus();
+    },
+
+    /**
+     * @param {!CustomEvent} e
+     * @private
+     */
+    onShowInstallWarnings_: function(e) {
+      // Leverage Polymer data bindings instead of just assigning the
+      // installWarnings on the dialog since the dialog hasn't been stamped
+      // in the DOM yet.
+      this.installWarnings_ = /** @type{!Array<string>} */ (e.detail);
+      this.showInstallWarningsDialog_ = true;
+    },
+
+    /** @private */
+    onInstallWarningsDialogClose_: function() {
+      this.installWarnings_ = null;
+      this.showInstallWarningsDialog_ = false;
     },
 
     // <if expr="chromeos">
